<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.janari.SimpleDailyBudgetApp.EnterIncomeAndExpensesActivity">


        <EditText
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="Start date:"
            android:inputType="date"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="16dp"/>

        <EditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="End date:"
            android:inputType="date"
            android:textSize="24sp"
            android:layout_below="@+id/start_date"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="16dp"/>

        <EditText
            android:id="@+id/incomes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Income"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:layout_below="@+id/end_date"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="16dp"/>

        <EditText
            android:id="@+id/fixed_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Fixed expenses"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:layout_below="@+id/incomes"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:textSize="18sp"
            android:layout_below="@+id/fixed_expenses"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/background"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="16dp"/>

        <TextView
            android:id="@+id/o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID"
            android:visibility="invisible" />


</RelativeLayout>
