...
        android:text="Log IN "
        android:textColor="@color/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="197dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:text="Register"
        android:textColor="@color/background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="272dp" />

</RelativeLayout>
