...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <EditText
        android:id="@+id/expences"
        android:layout_width="134dp"
        android:layout_height="93dp"
        android:layout_marginBottom="230dp"
        android:layout_marginEnd="138dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="99dp"
...
        app:layout_constraintBottom_toTopOf="@+id/daily_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloText" />

    <Button
        android:id="@+id/button"
        android:layout_width="112dp"
        android:layout_height="105dp"
        android:layout_marginBottom="199dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="85dp"
...
